tests/pass/Division.java
// File 	: Division.java
// Created 	: 16.02.2020
// Author 	: Ahmed Khalil

package pass;

// to be used twice
public class Division {
	public int divide(int x, int y){
		return x / y;
	}
}