tests/fail/Division.java
// File 	: Division.java
// Created 	: 16.02.2020
// Author 	: Ahmed Khalil

package fail;

import java.lang.System;

public class Division {
	public static void main(String[] args) {
		System.out.println('a' / 42);
	}
}